# flex-agent

./: .gitignore  CLAUDE.md  README.md  env.example  main.py  pyproject.toml  skills-lock.json
data/: codebook_done.jsonl
direct_inference_eval/: README.md  __init__.py  run.py
direct_inference_eval/direct_eval/: __init__.py  constants.py  inference.py  io.py  llm.py  metrics.py  parser.py  pipeline.py  report.py  schemas.py
direct_inference_eval/prompts/: direct_batch.md
prompts/: agent_alice.md  agent_kevin.md
prompts/baseline/: agent_alice.md  agent_bob.md  agent_kevin.md  axial_refinement.md  construct_induction.md  eval_dimension_name_alignment.md  grounded_theory_background.md  open_coding.md
prompts/baseline_en/: agent_alice.md  agent_bob.md  agent_kevin.md  axial_refinement.md  construct_induction.md  eval_axial_category_alignment.md  grounded_theory_background.md  open_coding.md  task_background.md
prompts/baseline_fewshot/: agent_alice.md  agent_bob.md  agent_kevin.md  axial_refinement.md  construct_induction.md  open_coding.md
prompts/baseline_fewshot_en/: axial_refinement.md  construct_induction.md  open_coding.md  task_background.md
prompts/baseline_oneshot/: agent_alice.md  agent_bob.md  agent_kevin.md  axial_refinement.md  construct_induction.md  eval_axial_category_alignment.md  eval_text_alignment.md  open_coding.md  task_background.md
prompts/baseline_oneshot_en/: axial_refinement.md  construct_induction.md  eval_axial_category_alignment.md  eval_text_alignment.md  grounded_theory_background.md  open_coding.md
prompts/baseline_react/: agent_alice.md  agent_bob.md  agent_kevin.md  (+2 more)
tests/: test_config.py
web/: __init__.py
(+99 files in other folders)
