[project]
name = "flex-agent"
version = "0.1.0"
description = "DeepAgent-based open coding workspace with file persistence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.10",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-openai>=1.3.2,<2.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "pydantic>=2.13.4",
]

[project.scripts]
flex-agent = "flex_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flex_agent"]

[tool.hatch.build.targets.sdist]
include = ["src/flex_agent", "prompts"]
