[project]
name = "flex-agent"
version = "0.1.0"
description = "CODE construct-development engine with Deep Agents orchestration and file persistence"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.10",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-openai>=1.3.2,<2.0",
    "langgraph>=1.0,<2.0",
    "langsmith>=0.3.0",
    "pydantic>=2.13.4",
]

[project.scripts]
agent = "flex_agent.cli:main"
agent-web = "flex_agent_web.cli:main"

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flex_agent", "src/flex_agent_web"]

[tool.hatch.build.targets.sdist]
include = ["src/flex_agent", "prompts"]
